# My-Lib-python

./: .gitignore  README.md  READMI.md  changelog.md  pyproject.toml  setup.py
kirilltools/: Logging.py  Math.py  __init__.py  cipher.py  taskmgr.py
kirilltools/Utils/: FilesAndDir.py  __init__.py  decorators.py  iter.py  typedata.py
kirilltools/__advanted/: Logging_valdbares.py  __init__.py
kirilltools/errors/: FilesAndDir.py  Wifi.py  __init__.py  base.py  cipherError.py  decorators.py  iter.py  math.py
kirilltools/helpmodule/: CreateModules.py  OOP_tryexcept.py  OpenAndModule.py  __init__.py  basefunc.py  loops_and_func.py
kirilltools/internet/: __init__.py  check.py
tests/: test.py  test_cipher.py  test_iter.py  test_math.py
