[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Kirilltools"
version = "0.3.7"
description = "Всякие мелкие утилиты, справка, менеджер задач.."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
  {name = "kirill1943"}
]
dependencies = [
    "httpx",
    "h11",
    "httpcore",
    "anyio",
    "psutil",
    "rich",
    "markdown-it-py",
    "pygments"
]

[tool.setuptools]
packages = ["kirilltools"]
